test/2-error/num-literal-double-dot.test
{
  'compile-err': '''\
parse error: test/2-error/num-literal-double-dot.ploy:1:1-4: repeated '.' in number literal.
  0.0.0
  ~~~~
''',
  'compile-code': 1
}
